--- a/PP_2_3_1/src/webapp/WEB-INF/pages/user-info.html
+++ b/PP_2_3_1/src/webapp/WEB-INF/pages/user-info.html
@@ -10,16 +10,16 @@
     <input type="hidden" th:value="${user.getId}" th:attr="name='id'"/>
 
     <label for="name">Name: </label>
-    <input type="text" name="name" id="name">
+    <input type="text" th:field="*{user.name}" id="name"/>
     <br/>
     <label for="name">Surname: </label>
-    <input type="text" name="surname" id="surname">
+    <input type="text" th:field="*{user.surname}" id="surname"/>
     <br/>
     <label for="age">Age: </label>
-    <input type="number" min="1" max="150" name ="age" id="age"/>
+    <input type="number" min="1" max="150" th:field="*{user.age}" id="age"/>
     <br/>
     <label for="email">Email: </label>
-    <input type="text" name="email" id="email">
+    <input type="text" th:field="*{user.email}" id="email"/>
     <br/>
 
     <input type="submit" value="OK">
