--- a/PP_2_3_1/src/webapp/WEB-INF/pages/user-info.html
+++ b/PP_2_3_1/src/webapp/WEB-INF/pages/user-info.html
@@ -6,20 +6,24 @@
 </head>
 <body>
 <h2>User info</h2>
-<form method="POST" action="saveUser" modelattribute="user">
+<form th:method="POST" th:action="@{/saveUser}" th:object="${user}">
     <input type="hidden" th:value="${user.getId}" th:attr="name='id'"/>
 
     <label for="name">Name: </label>
-    <input type="text" th:field="*{user.name}" id="name"/>
-    <br/>
-    <label for="name">Surname: </label>
-    <input type="text" th:field="*{user.surname}" id="surname"/>
-    <br/>
+    <input type="text" th:field="*{name}" id="name"/>
+    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
+    <br>
+    <label for="surname">Surname: </label>
+    <input type="text" th:field="*{surname}" id="surname"/>
+    <div style="color:red" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Name error</div>
+    <br>
     <label for="age">Age: </label>
-    <input type="number" min="1" max="150" th:field="*{user.age}" id="age"/>
-    <br/>
+    <input type="number" th:field="*{age}" id="age"/>
+    <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name error</div>
+    <br>
     <label for="email">Email: </label>
-    <input type="text" th:field="*{user.email}" id="email"/>
+    <input type="text" th:field="*{email}" id="email"/>
+    <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name error</div>
     <br/>
     <br/>
     <input type="submit" value="OK">
